--- a/client/src/subViews/datasetList/components/DatasetDropList.scss
+++ b/client/src/subViews/datasetList/components/DatasetDropList.scss
@@ -7,7 +7,8 @@ $dropdown-btn-width: 100%;
   width: 100%;
   padding: 16px 0;
   height: 58px;
-  
+  display: flex;
+  justify-content: space-between;
   .QP__datasetList__title{
     float: left;
     line-height: $wsvi-panel-row-height;
@@ -40,3 +41,4 @@ $dropdown-btn-width: 100%;
     }
   }
 }
+
