--- a/client/src/subViews/datasetList/components/DatasetDropList.scss
+++ b/client/src/subViews/datasetList/components/DatasetDropList.scss
@@ -42,3 +42,22 @@ $dropdown-btn-width: 100%;
   }
 }
 
+
+.QP__datasetList{
+  width: 100%;
+  height: 27%;
+  min-height: 192px;
+  justify-content: space-between;
+  display: flex;
+
+  .QP__attributes-metrics-container{
+    width: calc(100% - 8px);
+
+    .QP__attributes-metrics-area__list{
+      border: $wsvi-border-gray 1px solid;
+      border-radius: 2px;
+      height: calc(100% - 26px);
+      background: #fff;
+    }
+  }
+}
